# label-studio

./: .env.example  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  run.sh
docker/: Dockerfile  docker-compose.yaml
docker/ls_config_data/: db.sqlite3  env.sh
docker/ls_config_data/label_studio/: .env
src/label_studio/: data_extactor.py
